file path change

--- a/1.osnove_html/index.html
+++ b/1.osnove_html/index.html
@@ -27,7 +27,7 @@
                 <a href="https://www.w3schools.com/html">Poveznica na w3schools</a>
             </li>
             <li>
-                <a href="vjezba.html">Zadatak za vježbu</a>
+                <a href="html_vjezba.html">Zadatak za vježbu</a>
             </li>
          </ul>
          <a href="https://www.algebra.hr/" target="_blank">
