--- a/1.osnove_html/index.html
+++ b/1.osnove_html/index.html
@@ -31,7 +31,7 @@
             </li>
          </ul>
          <a href="https://www.algebra.hr/" target="_blank">
-            <img src="pictures/algebra.png" alt="Algebra" width="7%">
+            <img src="pictures/algebra.png" alt="Algebra">
         </a>
     </nav>
 </body>
